@startuml

package "Módulo Raíz" {
    class AppModule <<Module>> {
    }
}

package "Módulo de Usuarios" {
    class UsersModule <<Module>> {
    }

    enum Role <<Enumerate>>{
        ADMIN
        USER
        SUSPEND
    }

    class UsersController <<Controller>> {
        + login(body: LoginDto): Object
        + register(body: RegisterDto): Object
    }

    class UsersService <<Service>> {
        + login(loginDto: LoginDto): Object
        + register(registerDto: RegisterDto): Object
    }

    class UserEntity <<Entity>> {
        - id{PK}: number
        - nombre: string
        - apellido: string
        - email: string
        - contrasena: string
        - telefono: string
        - rol: Role
        - publications: Publication[]
    }
    
    ' Composición: El módulo controla el ciclo de vida de sus componentes
    UsersModule "1" *-- "1" UsersController
    UsersModule "1" *-- "1" UsersService
    
    ' Asociación: El controlador usa el servicio
    UsersController "1" --> "1" UsersService : llama
    UsersService ..> UserEntity : <<Instancia>>
    UserEntity "1" --> "1" Role : tiene
}

package "Módulo de Publicaciones" {
    class PublicationsModule <<Module>> {
    }

    class PublicationsController <<Controller>> {
        + create(dto: CreatePublicationDto): Object
        + findAll(): Object[]
        + findByUser(userId: string): Object[]
        + findOne(id: string): Object
        + update(id: string, dto: UpdatePublicationDto): Object
        + remove(id: string): Object
    }

    class PublicationsService <<Service>>{
        + create(dto: CreatePublicationDto): Publication
        + findAll(): Publication[]
        + findByUser(userId: number): Publication[]
        + findByInitialText(term: string): Publication[]
        + findOne(id: number): Publication
        + update(id: number, dto: UpdatePublicationDto): Publication
        + remove(id: number): Publication
    }

    class Publication <<Entity>> {
        - id{PK}: number
        - name: string
        - lote: string
        - expirationDate: Date
        - description: string
        - additionalInfo: string
        - type: string
        - isActive: boolean
        - user: UserEntity
    }

    ' Composición
    PublicationsModule "1" *-- "1" PublicationsController
    PublicationsModule "1" *-- "1" PublicationsService
    
    ' Asociación
    PublicationsController "1" --> "1" PublicationsService : usa
    PublicationsService ..> Publication : <<Instancia>>
}

' Agregación: El módulo raíz agrupa a los módulos hijos
AppModule "1" o-- "1" UsersModule
AppModule "1" o-- "1" PublicationsModule

' Agregación: Un usuario agrupa publicaciones
UserEntity "1" o-- "0..*" Publication

@enduml
